# simple_nltk

./: MANIFEST.in  README.md  setup.cfg
simple_nltk/: __init__.py  book.py  cli.py  collections.py  collocations.py  compat.py  data.py  decorators.py  featstruct.py  grammar.py  help.py  internals.py  jsontags.py  probability.py  text.py  tgrep.py  tree.py  treeprettyprinter.py  treetransforms.py  util.py
simple_nltk/ccg/: __init__.py  api.py  chart.py  combinator.py  lexicon.py  logic.py
simple_nltk/chunk/: __init__.py  api.py  named_entity.py  regexp.py  util.py
simple_nltk/classify/: __init__.py  api.py  decisiontree.py  maxent.py  megam.py  naivebayes.py  positivenaivebayes.py  rte_classify.py  scikitlearn.py  svm.py  tadm.py  textcat.py  util.py  weka.py
simple_nltk/cluster/: __init__.py  api.py  em.py  gaac.py  kmeans.py  util.py
simple_nltk/lm/: api.py  (+7 more)
test/: Makefile  __init__.py  all.py  bleu.doctest  bnc.doctest  ccg.doctest  ccg_semantics.doctest  chat80.doctest  childes.doctest  childes_fixt.py  chunk.doctest  classify.doctest  collections.doctest  collocations.doctest  concordance.doctest  corpus.doctest  crubadan.doctest  data.doctest  dependency.doctest  discourse.doctest  discourse_fixt.py  drt.doctest  featgram.doctest  featstruct.doctest  framenet.doctest  generate.doctest  gensim.doctest  gluesemantics.doctest  gluesemantics_malt.doctest  gluesemantics_malt_fixt.py  grammar.doctest  grammartestsuites.doctest  index.doctest  inference.doctest  inference_fixt.py  internals.doctest  japanese.doctest  lm.doctest  logic.doctest  meteor.doctest  (+33 more)
(+123 files in other folders)
