[metadata]
name = simple_nltk
version = file: VERSION
description = a simple version of the NLTK
url=http://nltk.org/
long_description = file: README.md
long_description_content_type=text/markdown
author=Steven Bird
author_email=stevenbird1@gmail.com
maintainer=Steven Bird
maintainer_email=stevenbird1@gmail.com
license=Apache License, Version 2.0
keywords = NLP,natural language processing
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: General
    Topic :: Text Processing :: Indexing
    Topic :: Text Processing :: Linguistic


[options]
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    examples
    tests

[aliases]
test = pytest

[tool:pytest]
addopts = -sv

